--- a/src/app/modules/patient/patient-list/patient-list.component.html
+++ b/src/app/modules/patient/patient-list/patient-list.component.html
@@ -11,7 +11,7 @@
     </div>
     
     <div class="col-12 md:col-6 lg:col-8 flex justify-content-end">
-      <button pButton pRipple label="Add New Patient" icon="pi pi-plus" class="p-button-success" routerLink="/patient/new"></button>
+      <button pButton pRipple label="Add New Patient" icon="pi pi-plus" class="p-button-success" (click)="addNewPatient()"></button>
     </div>
   </div>
   
