--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,12 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
-
+@import "primeicons/primeicons.css";
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap');
 
 body {
-    font-family: var(--font-family);
+    font-family: 'Roboto', sans-serif;
+    font-size: 12px;
     margin: 0;
     padding: 0;
-    background-color: var(--surface-ground);
-    color: var(--text-color);
+    color: black;
 }
 
 .min-h-screen {
