--- a/src/app/modules/doctor/dashboard/doctor-dashboard/doctor-dashboard.component.html
+++ b/src/app/modules/doctor/dashboard/doctor-dashboard/doctor-dashboard.component.html
@@ -2,7 +2,7 @@
 <div class="grid">
   <div class="col-12">
     <h1>Doctor Dashboard</h1>
-    <p>Welcome back, Dr. Smith</p>
+    <p>Welcome back</p>
   </div>
   
   <div class="col-12 md:col-6 lg:col-3">
