--- a/src/app/modules/pharmacy/pharmacy-dashboard/pharmacy-dashboard.component.html
+++ b/src/app/modules/pharmacy/pharmacy-dashboard/pharmacy-dashboard.component.html
@@ -1,18 +1,16 @@
-<!-- src/app/modules/pharmacy/pharmacy-dashboard/pharmacy-dashboard.component.html -->
 <p-toast></p-toast>
 
 <div class="card">
   <div class="flex justify-content-between align-items-center mb-4">
     <h2>Pharmacy Management</h2>
     <div>
-      <button pButton pRipple label="New Prescription" icon="pi pi-plus" class="p-button-success mr-2" routerLink="/pharmacy/prescriptions/new"></button>
-      <button pButton pRipple label="Add Inventory" icon="pi pi-plus" class="p-button-primary" routerLink="/pharmacy/inventory/add"></button>
+      <button pButton pRipple label="Add Inventory" icon="pi pi-plus" class="p-button-primary p-button-sm"routerLink="/pharmacy/inventory/add"></button>
     </div>
   </div>
   
   <div class="grid">
     <!-- Summary Cards -->
-    <div class="col-12 md:col-6 lg:col-3">
+    <div class="col-12 md:col-4">
       <p-card styleClass="h-full">
         <div class="text-center">
           <i class="pi pi-box text-4xl text-primary mb-3"></i>
@@ -22,7 +20,7 @@
       </p-card>
     </div>
     
-    <div class="col-12 md:col-6 lg:col-3">
+    <div class="col-12 md:col-4">
       <p-card styleClass="h-full">
         <div class="text-center">
           <i class="pi pi-exclamation-triangle text-4xl text-yellow-500 mb-3"></i>
@@ -32,22 +30,12 @@
       </p-card>
     </div>
     
-    <div class="col-12 md:col-6 lg:col-3">
+    <div class="col-12 md:col-4">
       <p-card styleClass="h-full">
         <div class="text-center">
           <i class="pi pi-calendar-times text-4xl text-orange-500 mb-3"></i>
           <div class="text-900 font-medium text-xl mb-2">Soon Expiring</div>
           <div class="text-900 font-bold text-5xl">{{ getExpiringItems().length }}</div>
-        </div>
-      </p-card>
-    </div>
-    
-    <div class="col-12 md:col-6 lg:col-3">
-      <p-card styleClass="h-full">
-        <div class="text-center">
-          <i class="pi pi-file-edit text-4xl text-blue-500 mb-3"></i>
-          <div class="text-900 font-medium text-xl mb-2">Pending Prescriptions</div>
-          <div class="text-900 font-bold text-5xl">{{ getPendingPrescriptions().length }}</div>
         </div>
       </p-card>
     </div>
@@ -62,7 +50,7 @@
         <ng-template pTemplate="caption">
           <div class="flex justify-content-between align-items-center">
             <h5 class="m-0">Medicine Inventory</h5>
-            <button pButton pRipple label="Add Stock" icon="pi pi-plus" class="p-button-sm" routerLink="/pharmacy/inventory/add"></button>
+            <button pButton pRipple label="Add Inventory" icon="pi pi-plus" class="p-button-sm" routerLink="/pharmacy/inventory/add"></button>
           </div>
         </ng-template>
         <ng-template pTemplate="header">
@@ -73,7 +61,6 @@
             <th>Supplier</th>
             <th>Quantity</th>
             <th>Status</th>
-            <th>Actions</th>
           </tr>
         </ng-template>
         <ng-template pTemplate="body" let-item>
@@ -88,10 +75,6 @@
                 {{ getInventoryStatus(item.QuantityInStock) }}
               </span>
             </td>
-            <td>
-              <button pButton pRipple icon="pi pi-eye" class="p-button-rounded p-button-text"
-                      [routerLink]="['/pharmacy/inventory', item.InventoryID]"></button>
-            </td>
           </tr>
         </ng-template>
         <ng-template pTemplate="emptymessage">
@@ -104,7 +87,7 @@
       </p-table>
     </p-tabPanel>
     
-    <!-- Prescriptions Tab -->
+    <!-- Prescriptions Tab
     <p-tabPanel header="Prescriptions">
       <p-table [value]="prescriptions" [paginator]="true" [rows]="10" styleClass="p-datatable-sm" [loading]="loading"
                [globalFilterFields]="['PatientName', 'DoctorName']">
@@ -147,7 +130,7 @@
           </tr>
         </ng-template>
       </p-table>
-    </p-tabPanel>
+    </p-tabPanel> -->
     
     <!-- Medicines Tab -->
     <p-tabPanel header="Medicines">
@@ -156,7 +139,7 @@
         <ng-template pTemplate="caption">
           <div class="flex justify-content-between align-items-center">
             <h5 class="m-0">Medicine Catalog</h5>
-            <button pButton pRipple label="Add Medicine" icon="pi pi-plus" class="p-button-sm" routerLink="/pharmacy/medicines/new"></button>
+            <button pButton pRipple label="Add Medicine" icon="pi pi-plus" class="p-button-sm" routerLink="/pharmacy/medicines/add"></button>
           </div>
         </ng-template>
         <ng-template pTemplate="header">
@@ -166,7 +149,6 @@
             <th>Generic Name</th>
             <th>Dosage Form</th>
             <th>Manufacturer</th>
-            <th>Actions</th>
           </tr>
         </ng-template>
         <ng-template pTemplate="body" let-medicine>
@@ -176,10 +158,6 @@
             <td>{{ medicine.GenericName || 'N/A' }}</td>
             <td>{{ medicine.DosageForm }}</td>
             <td>{{ medicine.Manufacturer || 'N/A' }}</td>
-            <td>
-              <button pButton pRipple icon="pi pi-eye" class="p-button-rounded p-button-text"
-                      [routerLink]="['/pharmacy/medicines', medicine.MedicineID]"></button>
-            </td>
           </tr>
         </ng-template>
         <ng-template pTemplate="emptymessage">
