--- a/src/app/modules/vitals/vitals-add/vitals-add.component.html
+++ b/src/app/modules/vitals/vitals-add/vitals-add.component.html
@@ -1,4 +1,3 @@
-<!-- src/app/modules/vitals/vitals-add/vitals-add.component.html -->
 <p-toast></p-toast>
 
 <div class="card">
@@ -10,11 +9,11 @@
   <div class="grid">
     <div class="col-12 md:col-4">
       <p-card header="Patient Information">
-        <div *ngIf="!vitalsData.patientId">
+        <div>
           <div class="field mb-4">
             <label for="patient" class="block text-900 font-medium mb-2">Patient*</label>
-            <p-dropdown id="patient" [options]="patients" [(ngModel)]="vitalsData.patientId" 
-                        placeholder="Select Patient" [filter]="true" [showClear]="true" styleClass="w-full"></p-dropdown>
+            <p-select id="patient" [options]="patients" optionLabel="patientName" optionValue="PatientID" [(ngModel)]="vitalsData.patientId" 
+                        placeholder="Select Patient" [filter]="true" [showClear]="true" styleClass="w-full"></p-select>
           </div>
         </div>
         
