--- a/src/app/modules/auth/login/login/login.component.html
+++ b/src/app/modules/auth/login/login/login.component.html
@@ -1,12 +1,11 @@
-<!-- src/app/modules/auth/login/login.component.html -->
 <p-toast></p-toast>
 
-<div class="surface-ground flex align-items-center justify-content-center min-h-screen min-w-screen overflow-hidden">
+<div>
   <div class="flex flex-column align-items-center justify-content-center">
     <div style="border-radius:56px; padding:0.3rem; background: linear-gradient(180deg, var(--primary-color) 10%, rgba(33, 150, 243, 0) 30%);">
       <div class="w-full surface-card py-8 px-5 sm:px-8" style="border-radius:53px">
         <div class="text-center mb-5">
-          <div class="text-900 text-3xl font-medium mb-3">Welcome to IHMS</div>
+          <div class="text-900 text-3xl font-medium mb-3">Welcome to Meditrendz</div>
           <span class="text-600 font-medium">Sign in to continue</span>
         </div>
         
@@ -30,7 +29,6 @@
               {{ errorMessage }}
             </div>
             
-            <!-- Registration link -->
             <div class="text-center mt-3 mb-3">
               <span class="text-600 font-medium">Don't have an account?</span>
               <a routerLink="/auth/register" class="font-medium no-underline ml-2" style="color: var(--primary-color)">Register here</a>
