--- a/src/app/modules/admin/doctor-register/doctor-register.component.html
+++ b/src/app/modules/admin/doctor-register/doctor-register.component.html
@@ -53,8 +53,8 @@
         
         <div class="field mb-4">
           <label for="department" class="block text-900 font-medium mb-2">Department*</label>
-          <p-dropdown id="department" [options]="departments" [(ngModel)]="doctorData.departmentId" 
-                      placeholder="Select Department" [showClear]="true" styleClass="w-full"></p-dropdown>
+          <p-select id="department" [options]="departments" [(ngModel)]="doctorData.departmentId" 
+                      placeholder="Select Department" [showClear]="true" styleClass="w-full"></p-select>
         </div>
         
         <div class="field mb-4">
