--- a/src/app/modules/auth/login/login/login.component.scss
+++ b/src/app/modules/auth/login/login/login.component.scss
@@ -1,10 +1,10 @@
 // src/app/modules/auth/login/login.component.scss
-:host ::ng-deep {
-  .p-password {
-    width: 100%;
+// :host ::ng-deep {
+//   .p-password {
+//     width: 100%;
     
-    input {
-      width: 100%;
-    }
-  }
-}
+//     input {
+//       width: 100%;
+//     }
+//   }
+// }
