--- a/src/app/modules/auth/register/register.component.html
+++ b/src/app/modules/auth/register/register.component.html
@@ -1,7 +1,6 @@
-<!-- src/app/modules/auth/register/register.component.html -->
 <p-toast></p-toast>
 
-<div class="surface-ground flex align-items-center justify-content-center min-h-screen min-w-screen overflow-hidden">
+<div>
   <div class="flex flex-column align-items-center justify-content-center">
     <div style="border-radius:56px; padding:0.3rem; background: linear-gradient(180deg, var(--primary-color) 10%, rgba(33, 150, 243, 0) 30%);">
       <div class="w-full surface-card py-6 px-5 sm:px-8" style="border-radius:53px">
@@ -67,16 +66,16 @@
               <div class="col-12 md:col-6">
                 <div class="field mb-4">
                   <label for="gender" class="block text-900 font-medium mb-2">Gender*</label>
-                  <p-dropdown id="gender" [options]="genderOptions" [(ngModel)]="registrationData.gender" name="gender"
-                              placeholder="Select Gender" styleClass="w-full"></p-dropdown>
+                  <p-select id="gender" [options]="genderOptions" [(ngModel)]="registrationData.gender" name="gender"
+                              placeholder="Select Gender" styleClass="w-full"></p-select>
                 </div>
               </div>
               
               <div class="col-12 md:col-6">
                 <div class="field mb-4">
                   <label for="bloodGroup" class="block text-900 font-medium mb-2">Blood Group</label>
-                  <p-dropdown id="bloodGroup" [options]="bloodGroupOptions" [(ngModel)]="registrationData.bloodGroup" name="bloodGroup"
-                              placeholder="Select Blood Group" [showClear]="true" styleClass="w-full"></p-dropdown>
+                  <p-select id="bloodGroup" [options]="bloodGroupOptions" [(ngModel)]="registrationData.bloodGroup" name="bloodGroup"
+                              placeholder="Select Blood Group" [showClear]="true" styleClass="w-full"></p-select>
                 </div>
               </div>
               
