--- a/src/app/modules/patient/patient-edit/patient-edit.component.html
+++ b/src/app/modules/patient/patient-edit/patient-edit.component.html
@@ -40,12 +40,12 @@
           
           <div class="field mb-4">
             <label for="gender" class="block text-900 font-medium mb-2">Gender *</label>
-            <p-dropdown id="gender" [options]="genderOptions" [(ngModel)]="patient.gender" placeholder="Select Gender" [showClear]="false" styleClass="w-full"></p-dropdown>
+            <p-select id="gender" [options]="genderOptions" [(ngModel)]="patient.gender" placeholder="Select Gender" [showClear]="false" styleClass="w-full"></p-select>
           </div>
           
           <div class="field mb-4">
             <label for="bloodGroup" class="block text-900 font-medium mb-2">Blood Group</label>
-            <p-dropdown id="bloodGroup" [options]="bloodGroupOptions" [(ngModel)]="patient.bloodGroup" placeholder="Select Blood Group" [showClear]="true" styleClass="w-full"></p-dropdown>
+            <p-select id="bloodGroup" [options]="bloodGroupOptions" [(ngModel)]="patient.bloodGroup" placeholder="Select Blood Group" [showClear]="true" styleClass="w-full"></p-select>
           </div>
         </p-card>
       </div>
