--- a/src/app/modules/pharmacy/inventory-add/inventory-add.component.html
+++ b/src/app/modules/pharmacy/inventory-add/inventory-add.component.html
@@ -12,8 +12,8 @@
       <p-card header="Medicine Information">
         <div class="field mb-4">
           <label for="medicine" class="block text-900 font-medium mb-2">Medicine*</label>
-          <p-dropdown id="medicine" [options]="medicines" [(ngModel)]="inventoryItem.medicineId" 
-                      placeholder="Select Medicine" [filter]="true" [showClear]="true" styleClass="w-full"></p-dropdown>
+          <p-select id="medicine" [options]="medicines" [(ngModel)]="inventoryItem.medicineId" 
+                      placeholder="Select Medicine" [filter]="true" [showClear]="true" styleClass="w-full"></p-select>
         </div>
         
         <div class="field mb-4">
@@ -23,8 +23,8 @@
         
         <div class="field mb-4">
           <label for="supplier" class="block text-900 font-medium mb-2">Supplier*</label>
-          <p-dropdown id="supplier" [options]="suppliers" [(ngModel)]="inventoryItem.supplierId" 
-                      placeholder="Select Supplier" [filter]="true" [showClear]="true" styleClass="w-full"></p-dropdown>
+          <p-select id="supplier" [options]="suppliers" [(ngModel)]="inventoryItem.supplierId" 
+                      placeholder="Select Supplier" [filter]="true" [showClear]="true" styleClass="w-full"></p-select>
         </div>
         
         <div class="field mb-4">
