--- a/src/app/modules/auth/login/login/login.component.html
+++ b/src/app/modules/auth/login/login/login.component.html
@@ -15,7 +15,7 @@
             <input id="email" type="text" pInputText class="w-full mb-3" [(ngModel)]="loginData.email" name="email" placeholder="Email address" required>
             
             <label for="password" class="block text-900 font-medium text-xl mb-2">Password</label>
-            <p-password id="password" [(ngModel)]="loginData.password" name="password" [toggleMask]="true" styleClass="w-full mb-3" [inputStyleClass]="'w-full'" placeholder="Password" required></p-password>
+            <p-password id="password" [(ngModel)]="loginData.password" name="password" [toggleMask]="true" [feedback]="false" styleClass="w-full mb-3" [inputStyleClass]="'w-full'" placeholder="Password" required></p-password>
             
             <div class="flex align-items-center justify-content-between mb-5">
               <div class="flex align-items-center">
