--- a/src/app/modules/auth/register/register.component.html
+++ b/src/app/modules/auth/register/register.component.html
@@ -44,14 +44,14 @@
               <div class="col-12 md:col-6">
                 <div class="field mb-4">
                   <label for="password" class="block text-900 font-medium mb-2">Password*</label>
-                  <p-password id="password" [(ngModel)]="registrationData.password" name="password" [toggleMask]="true" styleClass="w-full" [inputStyleClass]="'w-full'"></p-password>
+                  <p-password id="password" [(ngModel)]="registrationData.password" name="password" [toggleMask]="true" [feedback]="false" styleClass="w-full" [inputStyleClass]="'w-full'"></p-password>
                 </div>
               </div>
               
               <div class="col-12 md:col-6">
                 <div class="field mb-4">
                   <label for="confirmPassword" class="block text-900 font-medium mb-2">Confirm Password*</label>
-                  <p-password id="confirmPassword" [(ngModel)]="registrationData.confirmPassword" name="confirmPassword" [toggleMask]="true" styleClass="w-full" [inputStyleClass]="'w-full'"></p-password>
+                  <p-password id="confirmPassword" [(ngModel)]="registrationData.confirmPassword" name="confirmPassword" [toggleMask]="true" [feedback]="false" styleClass="w-full" [inputStyleClass]="'w-full'"></p-password>
                 </div>
               </div>
               
